# goph420-w2023-lab03-stEH

./: README.md  driver.py  pyproject.toml
src/linear_regression/: data_importer.py  regression.py
tests/: test_multi_regress.py
