[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "linear_regression"
version = "0.0.1"
authors = [
{ name="Emily Hill", email="emily.hill@ucalgary.ca" },
]
description="Linear Regression Lab implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/EmilyH25/goph420-w2023-lab03-stEH"